--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         >
-        <activity android:name=".exchange.ChooseCurrenciesActivity"></activity>
+        <activity android:name=".stock.ViewLocationsActivity"></activity>
+        <activity android:name=".exchange.ChooseCurrenciesActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -25,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".stock.NewStockActivity"></activity>
+        <activity android:name=".stock.NewStockActivity" />
     </application>
 
 </manifest>
