--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         >
-        <activity android:name=".stock.ViewLocationsActivity"></activity>
+        <activity android:name=".stock.EditMeatTypesActivity"></activity>
+        <activity android:name=".stock.EditLocationsActivity" />
         <activity android:name=".exchange.ChooseCurrenciesActivity" />
         <activity
             android:name=".MainActivity"
