--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         >
-        <activity android:name=".stock.EditLocationsActivity"></activity>
+        <activity android:name=".orders.NewOrderActivity"></activity>
+        <activity android:name=".stock.EditLocationsActivity" />
         <activity android:name=".stock.EditProductsActivity" />
         <activity android:name=".stock.EditMeatTypesActivity" />
         <activity android:name=".stock.LocationsActivity" />
