--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         >
-        <activity android:name=".contracts.NewContractActivity"></activity>
+        <activity android:name=".contracts.ContractDetailActivity"></activity>
+        <activity android:name=".contracts.NewContractActivity" />
         <activity android:name=".orders.OrderDetailActivity" />
         <activity android:name=".orders.NewOrderActivity" />
         <activity android:name=".stock.EditLocationsActivity" />
