--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.martinwalls.nea"
     >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,9 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         >
-        <activity android:name=".contracts.ContractDetailActivity"></activity>
+        <activity android:name=".contracts.ContractDetailActivity"/>
         <activity android:name=".contracts.NewContractActivity" />
         <activity android:name=".orders.OrderDetailActivity" />
         <activity android:name=".orders.NewOrderActivity" />
@@ -34,6 +36,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".stock.NewStockActivity" />
+        <service
+            android:name=".exchange.ApiIntentService"
+            android:exported="false"
+            />
     </application>
-
 </manifest>
