store key in native code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,11 @@ android {
         sourceCompatibility JavaVersion.current()
         targetCompatibility JavaVersion.current()
     }
+    externalNativeBuild {
+        cmake {
+            path file('CMakeLists.txt')
+        }
+    }
 }
 
 dependencies {
