--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,6 +23,7 @@
             android:name=".SettingsActivity"
             android:label="@string/settings_title"
             android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.FadeTransition"
             >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
