--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         >
-        <activity android:name=".stock.LocationDetailActivity"></activity>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings_title"
@@ -39,6 +38,7 @@
         <activity android:name=".stock.EditProductsActivity" />
         <activity android:name=".stock.EditMeatTypesActivity" />
         <activity android:name=".stock.LocationsActivity" />
+        <activity android:name=".stock.LocationDetailActivity" />
         <activity android:name=".exchange.ChooseCurrenciesActivity" />
         <activity
             android:name=".MainActivity"
