--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         >
+        <activity android:name=".stock.EditLocationActivity"></activity>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings_title"
@@ -34,7 +35,7 @@
         <activity android:name=".contracts.NewContractActivity" />
         <activity android:name=".orders.OrderDetailActivity" />
         <activity android:name=".orders.NewOrderActivity" />
-        <activity android:name=".stock.EditLocationsActivity" />
+        <activity android:name=".stock.NewLocationActivity" />
         <activity android:name=".stock.EditProductsActivity" />
         <activity android:name=".stock.EditMeatTypesActivity" />
         <activity android:name=".stock.LocationsActivity" />
