--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         >
-        <activity android:name=".stock.EditLocationActivity"></activity>
+        <activity android:name=".stock.StockDetailActivity"></activity>
+        <activity android:name=".stock.EditLocationActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings_title"
