--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".stock.NewStockActivity" />
+        <activity android:name=".stock.EditStockActivity" />
         <activity android:name=".orders.EditOrderActivity" />
 
         <service
