--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,12 @@
         <activity android:name=".ui.meat_types.EditMeatTypesActivity" />
         <activity android:name=".ui.locations.LocationsActivity" />
         <activity android:name=".ui.locations.LocationDetailActivity" />
-        <activity android:name=".ui.exchange.ChooseCurrenciesActivity" />
+        <activity android:name=".ui.exchange.ChooseCurrenciesActivity">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"
+                />
+        </activity>
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
