show test notification every day at 18:30

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         tools:ignore="GoogleAppIndexingWarning"
         >
         <receiver
-            android:name=".ui.ReminderReceiver"
+            android:name=".util.ReminderReceiver"
             android:enabled="true"
             android:exported="false"
             />
