view binding and view model stuff

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
             path file('CMakeLists.txt')
         }
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
