--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
         debug {
             debuggable true
             minifyEnabled true
+            useProguard false
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             applicationIdSuffix ".debug"
