--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.martinwalls.meatmanager"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 2
-        versionName "0.2"
+        versionCode 3
+        versionName "1.0.0-alpha"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -58,6 +58,8 @@ dependencies {
     testImplementation 'com.google.truth:truth:1.0'
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0'
     testImplementation 'org.ow2.asm:asm:7.0'
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:2.19.0'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
