--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.martinwalls.meatmanager"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 2
-        versionName "0.2"
+        versionCode 4
+        versionName "1.0.1-alpha"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
